--- a/views/crowdsale.handlebars
+++ b/views/crowdsale.handlebars
@@ -33,15 +33,29 @@
             <li class="m_right_15 m_bottom_15 tooltip_container">
               <!--tooltip-->
               <span class="d_block r_corners color_default tooltip fs_small tr_all">Follow Us on Facebook</span>
-              <a href="" class="d_block facebook icon_wrap_size_2 circle color_grey_light_2">
-                <i class="icon-facebook fs_small"></i>
+              <a href="https://www.facebook.com/virtutv/" class="d_block facebook icon_wrap_size_2 color_grey_light_2" target="_blank">
+                <i class="icon-facebook fa-lg fs_small"></i>
+              </a>
+            </li> 
+            <li class="m_right_15 m_bottom_15 tooltip_container">
+              <!--tooltip-->
+              <span class="d_block r_corners color_default tooltip fs_small tr_all">Follow Us on Twitter</span>
+              <a href="https://twitter.com/virtu_tv" class="d_block twitter icon_wrap_size_2 color_grey_light_2" target="_blank">
+                <i class="icon-twitter fa-lg fs_small"></i>
               </a>
             </li>
             <li class="m_right_15 m_bottom_15 tooltip_container">
               <!--tooltip-->
-              <span class="d_block r_corners color_default tooltip fs_small tr_all">Follow Us on Twitter</span>
-              <a href="" class="d_block twitter icon_wrap_size_2 circle color_grey_light_2">
-                <i class="icon-twitter fs_small"></i>
+              <span class="d_block r_corners color_default tooltip fs_small tr_all">View Our Code On Github</span>
+              <a href="https://github.com/VirtuTV" class="d_block github icon_wrap_size_2 color_grey_light_2" target="_blank">
+                <i class="icon-github fa-lg fs_small"></i>
+              </a>
+            </li>
+            <li class="m_right_15 m_bottom_15 tooltip_container">
+              <!--tooltip-->
+              <span class="d_block r_corners color_default tooltip fs_small tr_all">Fllow Us On Medium</span>
+              <a href="https://github.com/VirtuTV" class="d_block medium icon_wrap_size_2 color_grey_light_2" target="_blank">
+                <i class="fa fa-medium fa-lg fs_small"></i>
               </a>
             </li>
           </ul>
