--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -7,7 +7,7 @@
             <a href="/crowdsale" class="select_button_left f_xs_none color_light bg_color_green relative color_green_hover fs_medium tt_uppercase f_left">Contribute to Crowdsale</a>
             <div class="f_left or color_light tt_uppercase d_xs_none">or</div>
             {{!-- <br class="d_none d_xs_block"> --}}
-            <a href="#how_it_works" class="select_button_right color_dark f_xs_none bg_light color_light_hover fs_medium relative tt_uppercase f_left">ICO Details</a>
+            <a href="#how_it_works" class="select_button_right color_dark f_xs_none bg_light color_light_hover fs_medium relative tt_uppercase f_left">View ICO Details</a>
           </div>
         </div>
       </section>
@@ -24,7 +24,8 @@
                 </div>
                 <figcaption>
                   <h5 class="color_dark m_bottom_15">Monetize Content</h5>
-                  <p class="m_bottom_23">Get paid not only for each ad engagement, but also for each view. Monetization is enabled by default. So, you are automatically setup to earn when signed up. A bank account, mailing address and tax information are not needed. </p>
+                  <p class="m_bottom_23">
+                  As a content creator, you get paid-per view, for one time and recurring donations from fans, and you can  additionally earn money by streaming content to viewers, and by flagging inappropriate content.</p>
                   {{!-- <a href="#" class="button_type_2 color_dark r_corners fs_medium color_blue_hover tr_all d_inline_b">Read More</a> --}}
                 </figcaption>
               </figure>
@@ -36,7 +37,7 @@
                 </div>
                 <figcaption>
                   <h5 class="color_dark m_bottom_15">Earn More</h5>
-                  <p class="m_bottom_23">Our mission is to treat creators' fairly. That's why creators' always keep the majority earned.</p>
+                  <p class="m_bottom_23">Our mission is to treat creators fairly. That's why creators always keep the majority earned.</p>
                 </figcaption>
               </figure>
             </div>
@@ -74,7 +75,7 @@
                 </div>
                 <figcaption>
                   <h5 class="color_dark m_bottom_15">Anonymity</h5>
-                  <p class="m_bottom_23">Creators' can remain anonymous on the VirtuTV platform. An excellent feature for citizen and investigative journalists, creators' can collect their rewards without revealing their identity.</p>
+                  <p class="m_bottom_23">Creators can remain anonymous on the VirtuTV platform. An excellent feature for citizen and investigative journalists, creators can collect their rewards without revealing their identity.</p>
                   {{!-- <a href="#" class="button_type_2 color_dark r_corners fs_medium color_pink_hover tr_all d_inline_b">Read More</a> --}}
                 </figcaption>
               </figure>
@@ -109,7 +110,7 @@
             </div>
             <div class="col-lg-4 col-md-5" data-appear-animation="fadeInUp" data-appear-animation-delay="600">
               <h3 class="color_light fw_light m_bottom_40 m_xs_top_0">Our Mission</h3>
-              <p class="fs_large m_bottom_12 fw_light color_light">VirtuTV gives creators' the potential to earn income by streaming their videos, and gives others the potential to earn income by streaming videos to viewers. There are no restrictions from advertisers, editors, and employers. </p>
+              <p class="fs_large m_bottom_12 fw_light color_light">VirtuTV gives creators the potential to earn income by streaming their videos, and gives others the potential to earn income by streaming videos to viewers. There are no restrictions from advertisers, editors, and employers. </p>
               <p class="fs_large fw_light m_bottom_45 color_light">We believe that video content and information should be censorship-free. That's why we created VirtuTV on a decentralized, P2P network.</p>
               <a href="#" class="color_green fs_medium button_type_3 tr_all r_corners tt_uppercase d_inline_b">Download Whitepaper</a>
             </div>
@@ -125,8 +126,9 @@
                 <p class="fs_large m_bottom_45 fw_light">Some of the features of the VirtuTV platform include monetization for everyone (not just content creators), an online wallet, video streaming via p2p, locked content (unlocked via donations). </p>
                 <h5 class="color_dark fw_ex_bold m_bottom_40 m_xs_top_0">Monetization for all</h5>
                 <ul class="color_dark fw_light">
-                  <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>Content creators get paid per view and per ad engagement</li>
-                  <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>One time or recurring donations to unlock content via VirtuCoin and then later Ether and Bitcoin</li>
+                  <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>Content creators get paid-per-view and per ad engagement</li>
+                  <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>One time or recurring donations to unlock content via VirtuCoin</li>
+                  <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>Earn by flagging inappropriate content</li>
                 </ul>
                 <br>
                 <h5 class="color_dark fw_ex_bold m_bottom_40 m_xs_top_0">Platform</h5>
