made changes to pages

--- a/views/crowdsale.handlebars
+++ b/views/crowdsale.handlebars
@@ -20,23 +20,16 @@
       <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-6 m_xs_bottom_30">
           <h5 class="color_dark m_bottom_23 fw_light">Notify Me</h5>
-          <form class="notify_me" action="/subscribe" method="post">
+          {{!-- <form class="notify_me" action="/subscribe" method="post">
             <div class="clearfix">
               <input type="email" class="fw_light f_left f_xs_none r_corners d_inline_m d_xs_block m_xs_bottom_10" placeholder="Enter your email address to be notified first" name="subscribe_email">
               <button class="button_type_6 f_right f_xs_none color_purple transparent r_corners fs_medium tr_all d_inline_m">Subscribe</button>
             </div>
-          </form>
+          </form> --}}
         </div>
         <div class="col-lg-6 col-md-6 col-sm-6">
           <h5 class="color_dark m_bottom_20 fw_light">Stay Connected</h5>
           <ul class="hr_list social_icons">
-            <li class="m_right_15 m_bottom_15 tooltip_container">
-              <!--tooltip-->
-              <span class="d_block r_corners color_default tooltip fs_small tr_all">Follow Us on Facebook</span>
-              <a href="https://www.facebook.com/virtutv/" class="d_block facebook icon_wrap_size_2 color_grey_light_2" target="_blank">
-                <i class="icon-facebook fa-lg fs_small"></i>
-              </a>
-            </li> 
             <li class="m_right_15 m_bottom_15 tooltip_container">
               <!--tooltip-->
               <span class="d_block r_corners color_default tooltip fs_small tr_all">Follow Us on Twitter</span>
@@ -49,13 +42,6 @@
               <span class="d_block r_corners color_default tooltip fs_small tr_all">View Our Code On Github</span>
               <a href="https://github.com/VirtuTV" class="d_block github icon_wrap_size_2 color_grey_light_2" target="_blank">
                 <i class="icon-github fa-lg fs_small"></i>
-              </a>
-            </li>
-            <li class="m_right_15 m_bottom_15 tooltip_container">
-              <!--tooltip-->
-              <span class="d_block r_corners color_default tooltip fs_small tr_all">Fllow Us On Medium</span>
-              <a href="https://github.com/VirtuTV" class="d_block medium icon_wrap_size_2 color_grey_light_2" target="_blank">
-                <i class="fa fa-medium fa-lg fs_small"></i>
               </a>
             </li>
           </ul>
