--- a/views/faq.handlebars
+++ b/views/faq.handlebars
@@ -22,7 +22,7 @@
                     <i class="icon-plus"></i>
                   </span>
                 </dt>
-                <dd class="fw_light color_dark">VirtuTV is a decentralized video consumption and monetization platform that gives creators a chance to earn money for their videos, and gives non-creators a chance to earn money by streaming video. The base currency of the platform is Virtucoin (VRTU). </dd>
+                <dd class="fw_light color_dark">VirtuTV is a decentralized video consumption and monetization platform that gives creators income for their videos, and gives non-creators income for streaming video. The base currency of the platform is Virtucoin (VRTU). </dd>
               </dl>
               
               <dl class="accordion_item r_corners wrapper m_bottom_5 tr_all">
@@ -34,7 +34,7 @@
                     <i class="icon-plus"></i>
                   </span>
                 </dt>
-                <dd class="fw_light color_dark">Yes! Every user that sign's up will automatically receive $5 worth of VRTU until the 50,000,000 reserve is exhausted. See the Whitepaper for details.</dd>
+                <dd class="fw_light color_dark">Yes! Every user that sign's up will automatically receive 10 VRTU coin until the 50,000,000 reserve is exhausted. See the Whitepaper for details.</dd>
               </dl>
               <dl class="accordion_item r_corners wrapper m_bottom_5 tr_all">
                 <dt class="accordion_link relative color_dark tr_all">Is it free to create an account?
@@ -56,7 +56,7 @@
                     <i class="icon-plus"></i>
                   </span>
                 </dt>
-                <dd class="fw_light color_dark">For the alpha product, VRTU's will be the currency of the VirtuTV Platform. Once the beta is finished, we will introduce Bitcoin, and Ether.</dd>
+                <dd class="fw_light color_dark">Only VRTU coin forever.</dd>
               </dl>
               <dl class="accordion_item r_corners wrapper m_bottom_5 tr_all">
                 <dt class="accordion_link relative color_dark tr_all">What are the different ways to earn money on the platform?
@@ -67,7 +67,7 @@
                     <i class="icon-plus"></i>
                   </span>
                 </dt>
-                <dd class="fw_light color_dark">Content creators get paid per view and for one-time/recurring donations that unlocks content for viewers. Non-content creators get paid for streaming video.</dd>
+                <dd class="fw_light color_dark">Content creators get paid per view and for one-time/recurring donations that unlock content for viewers. Non-content creators get paid for streaming video, and by flagging inappropriate content and content that is inappropriately categorized.</dd>
               </dl>
               <dl class="accordion_item r_corners wrapper m_bottom_5 tr_all">
                 <dt class="accordion_link relative color_dark tr_all">How long until rollout after the crowdsale?
@@ -78,7 +78,7 @@
                     <i class="icon-plus"></i>
                   </span>
                 </dt>
-                <dd class="fw_light color_dark">3 months. Alpha testing of our platform will begin approximately 12 weeks after the crowdsale for crowdsale participants! You can expect our beta to launch in the Fall of 2017.</dd>
+                <dd class="fw_light color_dark">3 months. Alpha testing of our platform will begin approximately 12 weeks after the crowdsale for crowdsale participants! You can expect our beta to launch in the first quarter of 2018.</dd>
               </dl>
               <dl class="accordion_item r_corners wrapper m_bottom_5 tr_all">
                 <dt class="accordion_link relative color_dark tr_all">How do I get an invite to the alpha?
@@ -100,7 +100,7 @@
                     <i class="icon-plus"></i>
                   </span>
                 </dt>
-                <dd class="fw_light color_dark">The crowdsale begins July 28th, 2017. We will provide periodic updates on our website and on our blog. Subscribe to our <a href="/crowdsale">newsletter</a> and our <a href="https://medium.com/@virtu.tv" target="_blank">Medium blog</a>. </dd>
+                <dd class="fw_light color_dark">The crowdsale begins on Wednesday, August 9th, 2017, at 6:30pm EST. We will provide periodic updates on our website and on our Slack.
               </dl>
               <dl class="accordion_item r_corners wrapper m_bottom_5 tr_all">
                 <dt class="accordion_link relative color_dark tr_all">Can you create and stream content and get paid for both?
