--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -25,7 +25,7 @@
                 <figcaption>
                   <h5 class="color_dark m_bottom_15">Monetize Content</h5>
                   <p class="m_bottom_23">
-                  As a content creator, you get paid-per view, for one time and recurring donations from fans, and you can  additionally earn money by streaming content to viewers, and by flagging inappropriate content.</p>
+                  As a content creator, you get paid-per-view, for one-time and recurring donations from fans, and you can additionally earn money by streaming content to viewers, and by flagging inappropriate content.</p>
                   {{!-- <a href="#" class="button_type_2 color_dark r_corners fs_medium color_blue_hover tr_all d_inline_b">Read More</a> --}}
                 </figcaption>
               </figure>
@@ -75,7 +75,7 @@
                 </div>
                 <figcaption>
                   <h5 class="color_dark m_bottom_15">Anonymity</h5>
-                  <p class="m_bottom_23">Creators can remain anonymous on the VirtuTV platform. An excellent feature for citizen and investigative journalists, creators can collect their rewards without revealing their identity.</p>
+                  <p class="m_bottom_23">Creators can remain anonymous on the VirtuTV platform. An excellent feature for citizen and investigative journalists, creators can collect their income without revealing their identity.</p>
                   {{!-- <a href="#" class="button_type_2 color_dark r_corners fs_medium color_pink_hover tr_all d_inline_b">Read More</a> --}}
                 </figcaption>
               </figure>
@@ -87,7 +87,8 @@
                 </div>
                 <figcaption>
                   <h5 class="color_dark m_bottom_15">Anti-censorship</h5>
-                  <p class="m_bottom_23">The VirtuTV platform is completely decentralized. So you'll never have to worry about your content being unjustly censored.</p>
+                  <p class="m_bottom_23"> Since we do not rely solely on ad revenue to compensate content creators, this allows us to focus on freedom of speech instead of siding with the advertiser’s voice.
+                  </p>
                   {{!-- <a href="#" class="button_type_2 color_dark r_corners fs_medium color_pink_hover tr_all d_inline_b">Read More</a> --}}
                 </figcaption>
               </figure>
@@ -109,9 +110,8 @@
               </div>
             </div>
             <div class="col-lg-4 col-md-5" data-appear-animation="fadeInUp" data-appear-animation-delay="600">
-              <h3 class="color_light fw_light m_bottom_40 m_xs_top_0">Our Mission</h3>
-              <p class="fs_large m_bottom_12 fw_light color_light">VirtuTV gives creators the potential to earn income by streaming their videos, and gives others the potential to earn income by streaming videos to viewers. There are no restrictions from advertisers, editors, and employers. </p>
-              <p class="fs_large fw_light m_bottom_45 color_light">We believe that video content and information should be censorship-free. That's why we created VirtuTV on a decentralized, P2P network.</p>
+              <h3 class="color_light fw_light m_bottom_40 m_xs_top_0">Why We Built This</h3>
+              <p class="fs_large m_bottom_12 fw_light color_light">Our mission is to enable anyone from anywhere to earn an income by creating and streaming media. </p>
               <a href="#" class="color_green fs_medium button_type_3 tr_all r_corners tt_uppercase d_inline_b">Download Whitepaper</a>
             </div>
           </div>
@@ -123,12 +123,12 @@
           <div class="row">
             <div class="col-lg-5 col-md-4" data-appear-animation="fadeInUp" data-appear-animation-delay="400">
                 <h3 class="color_dark fw_light m_bottom_40 m_xs_top_0">Features</h3>
-                <p class="fs_large m_bottom_45 fw_light">Some of the features of the VirtuTV platform include monetization for everyone (not just content creators), an online wallet, video streaming via p2p, locked content (unlocked via donations). </p>
+                <p class="fs_large m_bottom_45 fw_light">Some of the features of the VirtuTV platform include monetization for everyone (content creators and viewers via streaming), an online wallet, video streaming via p2p, locked content (unlocked via donations). </p>
                 <h5 class="color_dark fw_ex_bold m_bottom_40 m_xs_top_0">Monetization for all</h5>
                 <ul class="color_dark fw_light">
-                  <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>Content creators get paid-per-view and per ad engagement</li>
-                  <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>One time or recurring donations to unlock content via VirtuCoin</li>
-                  <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>Earn by flagging inappropriate content</li>
+                  <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>Content creators get paid per-view, from donations (one-time or recurring) and per ad engagements</li>
+                  <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>Anyone can earn via streaming content and flagging content that is inappropriate or inappropriately categorized</li>
+                 
                 </ul>
                 <br>
                 <h5 class="color_dark fw_ex_bold m_bottom_40 m_xs_top_0">Platform</h5>
@@ -136,7 +136,7 @@
                   <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>Online wallet</li>
                   <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>Video streaming via p2p</li>
                   <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>Locked content (unlocked via donations)</li>
-                  <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>Immediately get $5 worth of VRTU upon signup for free</li>
+                  <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>Immediately get 10 VRTU upon signup for free</li>
                   <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>Video engagement (like, dislike)</li>
                   <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>Nested comments</li>
                   <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>Subscriptions</li>
@@ -165,15 +165,16 @@
                     <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>ERC20 Standard Ethereum Token</li>
                     <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>VirtuTV Tokens are distributed <strong class="color_light">by smart contract</strong></li>
                     <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>Symbol Name: VRTU</li>
-                    <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>Token Distribution: 10% Offered For Crowdsale</li>
+                    <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>Price Per Token: 1 ETH = 160 VRTU</li>
                   </ul>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6 m_bottom_15">
                   <ul class="color_light fw_light">
                     <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>100,000,000 Tokens in Total Supply</li>
                     <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>Unadjustable Total Supply</li>
-                    <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>Price Per Token: 1 ETH = 160 VRTU</li>
-                    <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>Token Distribution: 50% Offered To Early Adopters</li>
+                   
+                    <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>10% Of Tokens Distributed Are Offered To ICO Investors, and</li>
+                    <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>50% Offered To Early VirtuTV Users </li>
                   </ul>
                 </div>
               </div>
@@ -185,7 +186,7 @@
       <section class="section_offset p_bottom_0">
         <div class="container t_align_c">
           <h3 class="color_dark fw_light m_bottom_15" data-appear-animation="bounceInLeft">More about VirtuTV</h3>
-          <p class="m_bottom_35" data-appear-animation="bounceInLeft" data-appear-animation-delay="150">The VirtuTV platform is perfect for content creators, video bloggers, podcasters, and journalists. </p>
+          <p class="m_bottom_35" data-appear-animation="bounceInLeft" data-appear-animation-delay="150">The VirtuTV platform is perfect for content creators, video course creators, bloggers, podcasters, and journalists. </p>
           <div class="relative screens">
             {{!-- <img class="layer_2" src="images/prototype09.png" alt="" data-appear-animation="fadeInUp" data-appear-animation-delay="600" width="60%" height="80%"> --}}
 
@@ -215,22 +216,22 @@
           </li>
           <li>
             <div class="fw_normal">
-              <time class="color_green">July 2017 </time> 1st token crowdsale.
+              <time class="color_green">August 2017 </time> 1st token crowdsale.
             </div>
           </li>
           <li>
             <div class="fw_normal">
-              <time class="color_green">Quarter 3 2017</time> Alpha MVP with basic functionality. Open to crowdsale participants only.
+              <time class="color_green">Quarter 1 2018</time> Alpha MVP with basic functionality. Open to crowdsale participants only.
             </div>
           </li>
           <li>
             <div class="fw_normal">
-              <time class="color_green">Quarter 4 2017</time> Beta with advanced functionality. Open to the public participants. 
+              <time class="color_green">Quarter 3 2018</time> Beta with advanced functionality. Open to public participants. 
             </div>
           </li>
           <li>
             <div class="fw_normal">
-              <time class="color_green">Quarter 1 2018</time> Advanced features. Open source SDKs and APIs and the general public.
+              <time class="color_green">Quarter 4 2018</time> Advanced features.
             </div>
           </li>
         </ul>
@@ -244,7 +245,7 @@
               <p>You can collaborate with others about the VirtuTV Project.</p>
             </div>
             <div class="col-lg-3 col-md-3 col-sm-4" data-appear-animation="fadeInUp" data-appear-animation-delay="200">
-              <a href="https://virtutv.herokuapp.com/" id="get_started" class="button_type_4 r_corners d_inline_b color_green tt_uppercase fs_large m_top_5 m_sm_top_25 tr_all">        <img src="https://png.icons8.com/slack/color/24" title="Slack" width="24" height="24">  Join Slack</a>
+              <a href="https://join.slack.com/t/virtutv/shared_invite/MjE0NjM5NjcwOTE5LTE1MDAyNTIxNzctN2RkYzJiNmU5NQ" id="get_started" class="button_type_4 r_corners d_inline_b color_green tt_uppercase fs_large m_top_5 m_sm_top_25 tr_all" target="_blank">        <img src="https://png.icons8.com/slack/color/24" title="Slack" width="24" height="24">  Join Slack</a>
             </div>
           </div>
         </div>
