--- a/views/crowdsale.handlebars
+++ b/views/crowdsale.handlebars
@@ -18,16 +18,16 @@
     {{/if}}
     <div class="container clearfix">
       <div class="row">
-        <div class="col-lg-6 col-md-6 col-sm-6 m_xs_bottom_30">
+        {{!-- <div class="col-lg-6 col-md-6 col-sm-6 m_xs_bottom_30">
           <h5 class="color_dark m_bottom_23 fw_light">Notify Me</h5>
-          {{!-- <form class="notify_me" action="/subscribe" method="post">
+          <form class="notify_me" action="/subscribe" method="post">
             <div class="clearfix">
               <input type="email" class="fw_light f_left f_xs_none r_corners d_inline_m d_xs_block m_xs_bottom_10" placeholder="Enter your email address to be notified first" name="subscribe_email">
               <button class="button_type_6 f_right f_xs_none color_purple transparent r_corners fs_medium tr_all d_inline_m">Subscribe</button>
             </div>
-          </form> --}}
-        </div>
-        <div class="col-lg-6 col-md-6 col-sm-6">
+          </form>
+        </div> --}}
+        <div class="col-lg-12 col-md-12 col-sm-12">
           <h5 class="color_dark m_bottom_20 fw_light">Stay Connected</h5>
           <ul class="hr_list social_icons">
             <li class="m_right_15 m_bottom_15 tooltip_container">
