--- a/views/faq.handlebars
+++ b/views/faq.handlebars
@@ -124,16 +124,18 @@
                 </dt>
                 <dd class="fw_exbold color_dark">Donations</dd>
                 <ul class="color_dark fw_light m_left_15">
-                    <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>95% goes to content creators, if there is no locked content</li>
-                    <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>90% of every donation goes to creators, if there is locked content</li>
+                    <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>95% goes to content creators, 5% platform fee, if there is no locked content</li>
+                    <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>90% of every donation goes to creators, 5% will go to file streamers, and 5% platform fee, if there is locked content</li>
                     <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>5% will go to file streamers</li>
                 </ul>
                 <br>
                 <dd class="fw_exbold color_dark">View Fees</dd>
                 <ul class="color_dark fw_light m_left_15">
-                    <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>50% will go to content creators</li>
+                    <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>49% will go to content creators</li>
                     <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>5% will go to file streamers</li>
                     <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>45% platform fee</li>
+                    <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>1% will go to a community bounty pool which will encourage community members to flag inappropriate content and keep the platform safe for all</li>
+                    
                 </ul>
                 <br>
                 <dd class="fw_exbold color_dark">Advertising Fees</dd>
