--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -98,22 +98,27 @@
       </section>
 
       <section class="section_offset p_bottom_0 darken">
-        <div class="container responsive_animate">
+        <div class="container responsive_animate t_align_c">
+          <h3 class="color_light fw_light m_bottom_40 m_xs_top_0">Why We Built This</h3>
+          <p class="fs_large m_bottom_12 fw_light color_light">Our mission is to enable anyone from anywhere to earn an income by creating and streaming media. </p>
           <div class="row">
-            <div class="col-lg-7 col-md-7 m_xs_bottom_30" data-appear-animation="fadeInUp" data-appear-animation-delay="400">
-              <div class="relative mobile">
+            <div class="col-lg-12 col-md-12 m_xs_bottom_30" data-appear-animation="fadeInUp" data-appear-animation-delay="400">
+              <div class="relative wrap-video">
                 {{!-- <img class="layer_1" src="images/Diagram08.png" alt="" height="100%"> --}}
                 {{!-- <img class="layer_2" src="images/layer_iphone.png" alt=""> --}}
                 <div class="iframe_video_wrap">
                   <iframe src="https://player.vimeo.com/video/64473966?title=0&amp;byline=0&amp;portrait=0&amp;color=dedede" ></iframe>
-              </div>
+                </div>
+                <br>
+                <a href="/crowdsale" class="color_green fs_large button_type_4 tr_all r_corners tt_uppercase d_inline_b f_left">Contribute To ICO</a>
+                <a href="#" class="fs_medium button_type_2 tr_all r_corners tt_uppercase d_inline_b f_right color_dark bg_light color_light_hover">Download The Whitepaper</a>
               </div>
             </div>
-            <div class="col-lg-4 col-md-5" data-appear-animation="fadeInUp" data-appear-animation-delay="600">
+            {{!-- <div class="col-lg-4 col-md-5" data-appear-animation="fadeInUp" data-appear-animation-delay="600">
               <h3 class="color_light fw_light m_bottom_40 m_xs_top_0">Why We Built This</h3>
               <p class="fs_large m_bottom_12 fw_light color_light">Our mission is to enable anyone from anywhere to earn an income by creating and streaming media. </p>
               <a href="#" class="color_green fs_medium button_type_3 tr_all r_corners tt_uppercase d_inline_b">Download Whitepaper</a>
-            </div>
+            </div> --}}
           </div>
         </div>
       </section>
@@ -158,7 +163,7 @@
           <div class="row">
             <div class="col-lg-12 col-lg-offset-1 col-md-6" data-appear-animation="fadeInUp" data-appear-animation-delay="600">
               <h3 class="color_light fw_light m_bottom_40 m_xs_top_0">ICO Details</h3>
-              <p class="fs_large fw_light color_light m_bottom_25">Our crowdsale begins on 07/28/17. </p>
+              <p class="fs_large fw_light color_light m_bottom_25">Our crowdsale begins on Monday, August 9th, 2017 at 6:30PM (EST). </p>
               <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-6 m_bottom_15">
                   <ul class="color_light fw_light">
