--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -342,13 +342,13 @@
           </div>
           <div class="col-lg-8 col-md-6 col-sm-8 d_table_cell d_xs_block p_xs_hr_0 v_align_m f_none t_align_r t_xs_align_c">
             <ul class="hr_list d_inline_b social_icons m_bottom_8">
-              <li class="m_right_8"><a href="https://www.facebook.com/virtutv/" class="color_grey_light facebook icon_wrap_size_1 d_block" target="_blank"><i class="fa fa-facebook fa-lg"></i></a></li>
+              {{!-- <li class="m_right_8"><a href="https://www.facebook.com/virtutv/" class="color_grey_light facebook icon_wrap_size_1 d_block" target="_blank"><i class="fa fa-facebook fa-lg"></i></a></li> --}}
               
               <li class="m_right_8"><a href="https://twitter.com/virtu_tv" class="color_grey_light twitter icon_wrap_size_1 d_block" target="_blank"><i class="fa fa-twitter fa-lg"></i></a></li>
               
               <li class="m_right_8"><a href="https://github.com/VirtuTV" class="color_grey_light github icon_wrap_size_1 d_block" target="_blank"><i class="fa fa-github fa-lg"></i></a></li>
               
-              <li class="m_right_8"><a href="https://www.reddit.com/user/virtutv/#" class="color_grey_light reddit icon_wrap_size_1 d_block" target="_blank"><i class="fa fa-reddit fa-lg"></i></a></li>
+            {{!--   <li class="m_right_8"><a href="https://www.reddit.com/user/virtutv/#" class="color_grey_light reddit icon_wrap_size_1 d_block" target="_blank"><i class="fa fa-reddit fa-lg"></i></a></li> --}}
             </ul>
             <br>
             <ul class="hr_list fs_small color_grey_light d_inline_b">
@@ -386,10 +386,10 @@
               <a class="color_dark fs_large relative r_xs_corners" href="https://virtutv.herokuapp.com/" target="_blank"><img src="https://png.icons8.com/slack/color/24" title="Slack" width="15" height="15" style="margin-top: 5px"> Slack
               </a>
             </li>
-            <li class="container3d relative f_xs_none m_xs_bottom_5">
+        {{!--     <li class="container3d relative f_xs_none m_xs_bottom_5">
               <a class="color_dark fs_large relative r_xs_corners" href="https://medium.com/@virtu.tv" target="_blank">Blog
               </a>
-            </li>
+            </li> --}}
             <li class="container3d relative f_xs_none m_xs_bottom_5">
               <a class="color_dark fs_large relative r_xs_corners" href="/team">Team
               </a>
